[package]
name = "backend"
version = "0.2.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-ws = "0.3.0"
actix-governor = "0.8.0"
actix-multipart = "0.7.2"

tokio = { version = "1.43.0", features = ["macros"], default-features = false }

url = { version = "2.5.4", features = ["serde"] }

rusty-s3 = "0.7.0"

serde = "1.0.217"
serde_json = "1.0.137"
serde_with = "3.12.0"

sqlx = { version = "0.8.3", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
sha2 = "0.10.8"
base64 = "0.22.1"
password-auth = "1.0.0"
cuid2 = "0.1.4"
snowflaked = "1.0.3"
webauthn-rs = { version = "0.5.1", features = ["danger-allow-state-serialisation", "conditional-ui"] }

thiserror = "2.0.11"
dotenvy = "0.15.7"
futures = "0.3.31"

chrono = { version = "0.4.39", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
ts-rs = { version = "10.1.0", features = ["chrono-impl", "url-impl"] }

tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7.15"

sentry = { version = "0.36.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls", "tracing"] }
sentry-actix = "0.36.0"

indexmap = "2.7.1"
dashmap = { version = "6.1.0", features = ["inline"] }
