[package]
name = "backend"
version = "0.2.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
actix-web = "4.12.0"
actix-cors = "0.7.1"
actix-ws = "0.3.0"
actix-governor = "0.10.0"
actix-multipart = "0.7.2"

tokio = { version = "1.48.0", features = ["macros"], default-features = false }

url = { version = "2.5.7", features = ["serde"] }

rusty-s3 = "0.8.1"

serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.0"

sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "tls-rustls", "chrono"] }
sha2 = "0.10.9"
base64 = "0.22.1"
password-auth = "1.0.0"
cuid2 = "0.1.4"
snowflaked = "1.0.3"
webauthn-rs = { version = "0.5.3", features = ["danger-allow-state-serialisation", "conditional-ui"] }

thiserror = "2.0.17"
dotenvy = "0.15.7"
futures = "0.3.31"

chrono = { version = "0.4.42", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
ts-rs = { version = "11.1.0", features = ["chrono-impl", "url-impl"] }

tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-actix-web = "0.7.19"

sentry = { version = "0.45.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls", "tracing"] }
sentry-actix = "0.45.0"

indexmap = "2.12.1"
dashmap = { version = "6.1.0", features = ["inline"] }
